--- a/data/解决方案报告.md
+++ b/data/解决方案报告.md
@@ -1,12 +1,20 @@
 #Introduction
+
 #Related work
+
 ##数据处理
+#### 原始数据集：
+* 一万名国内某著名财经新闻网站得用户一个月的全部浏览记录
+
 ##结巴分词
+
 #Approach
+
 ##基于内容推荐
 1. 通过结巴分词计算出前20天用户所看新闻的关键词，作为每个用户的喜好特征（profile）
 2. 通过结巴分词计算后十天新闻的关键词，来表示每个新闻的特征
 3. 如果后十天的用户在前二十天看过新闻（即已经知道此用户的喜好特征），根据用户的喜好特征与新闻特征相关性来推荐新闻给用户
 4. 如果后十天的用户是新用户（冷启动问题）
+
 ##协同过滤推荐
 #Experiments
