--- a/data/解决方案报告.md
+++ b/data/解决方案报告.md
@@ -95,3 +95,82 @@ $$J(A,B)=\frac{|A\cap B|}{|A\cup B|}$$
     *   基于新计算得到的用户关键词属性进行内容推荐
 
 # Experiments
+
+## 推荐正确的衡量标准
+
+*   后十天的测试集里一共有2070条不同的新闻，如果把新闻随机推荐给每个用户的话概率是1/2070,为了衡量推荐的准确度，我们定义下面两条规则来衡量一个成功的推荐：
+
+        （1）用户点击的新闻集如果一半或一半以上在推荐的新闻集里
+    （2）推荐的新闻集如果一半或一半以上在用户点击的新闻集里
+
+## 基于内容推荐的实验结果
+
+<table>
+<thead>
+<tr>
+<th></th>
+<th>用户人数</th>
+<th>推荐正确</th>
+<th>所占比例</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>总用户</td>
+<td>2915</td>
+<td>1109</td>
+<td>0.38</td>
+</tr>
+<tr>
+<td>老用户</td>
+<td>2131</td>
+<td>753</td>
+<td>0.35</td>
+</tr>
+<tr>
+<td>新用户</td>
+<td>784</td>
+<td>356</td>
+<td>0.45</td>
+</tr>
+</tbody>
+</table>
+
+## 协同过滤推荐的实验结果
+
+<table>
+<thead>
+<tr>
+<th></th>
+<th>用户人数</th>
+<th>推荐正确</th>
+<th>所占比例</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>总用户</td>
+<td>2915</td>
+<td>1078</td>
+<td>0.37</td>
+</tr>
+<tr>
+<td>老用户</td>
+<td>2131</td>
+<td>722</td>
+<td>0.34</td>
+</tr>
+<tr>
+<td>新用户</td>
+<td>784</td>
+<td>356</td>
+<td>0.45</td>
+</tr>
+</tbody>
+</table>
+
+## 实验结果分析
+
+*   从上述结果来看推荐结果还是挺好的，随机推荐的概率仅为0.000483，推荐结果的成功率增加了约700多倍。
+*   在上述结果中
+*   上述结果还可以看出基于新闻的点击率和时效性的推荐比基于内容和协同过滤的推荐准确率要高，这也和新闻推荐的特殊性有关，和其它推荐任务(如电影推荐)相比，新闻具指数上升，幂率下降的特性，所以基于新闻的点击率和时效性的推荐是十分有效的。
